# rest-api-flask-course

./: README.md  app.py  dodo.py  pyproject.toml
scripts/: extract_req.py  init-venv.bat
scripts/dodolib/: _types.py  doit.json  fsutil.py  helpers.py  netutil.py
scripts/dodolib/_tests/: __init__.py  test_fsutil.py
